# lisspyscope

./: README.md  pyproject.toml
examples/: ratio_1_to_3_phase45.py  ratio_2_to_3_phase45.py
lisspyscope/: __init__.py  core.py
tests/: test_core.py
