[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lisspyscope"
version = "0.1.0"
description = "Generate, play and save stereo audio that produces Lissajous figures on an oscilloscope."
authors = [{ name = "Naman Puri", email = "namanpuri1712@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.22",
  "sounddevice>=0.4"
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/namanPuri/lisspyscope"

[project.scripts]
lisspyscope = "lisspyscope.core:play_lissajous"
